# cbase2influxdb

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
src/cbase2influxdb/: cbase2influxdb.py
src/cbase2influxdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
